--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/tailwind": "^5.1.0",
     "@supabase/supabase-js": "^2.42.4",
     "astro": "^4.6.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "supabase": "^1.161.0"
   }
 }
