--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
     "@astrojs/tailwind": "^5.1.0",
     "@supabase/supabase-js": "^2.42.4",
     "astro": "^4.6.2",
@@ -18,6 +19,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.5",
     "supabase": "^1.161.0"
   }
 }
