--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -34,4 +34,4 @@ jobs:
         id: deploy
         uses: superfly/fly-pr-review-apps@1.2.0
         with:
-          secrets: SUPABASE_URL={{secrets.SUPABASE_URL}} SUPABASE_ANON_KEY={{ secrets.SUPABASE_ANON_KEY}}
+          secrets: SUPABASE_URL=${{secrets.SUPABASE_URL}} SUPABASE_ANON_KEY=${{secrets.SUPABASE_ANON_KEY}}
