--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -41,7 +41,7 @@ jobs:
       # if: ${{ github.event.action == 'closed' }}
         run: |
           echo "Cleaning up environment..."
-          curl -X DELETE -H "Authorization: token ${{ secrets.GH_ACCESS_TOKEN }}" "https://api.github.com/repos/${{github.repository}}/environments/pr-${{ github.event.number }}"
+          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}
           echo "Environment cleaned up."
         # uses: strumwolf/delete-deployment-environment@v2
         # with:
