--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -40,7 +40,8 @@ jobs:
       - name: Clean up GitHub environment
       # if: ${{ github.event.action == 'closed' }}
         run: |
-          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-8
+          response = curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-8
+          echo $response
         # uses: strumwolf/delete-deployment-environment@v2
         # with:
         #   # ⚠️ The provided token needs permission for admin write:org
