--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -38,10 +38,9 @@ jobs:
           secrets: SUPABASE_URL=${{secrets.SUPABASE_URL}} SUPABASE_ANON_KEY=${{secrets.SUPABASE_ANON_KEY}}
 
       - name: Clean up GitHub environment
-      # if: ${{ github.event.action == 'closed' }}
+        if: ${{ github.event.action == 'closed' }}
         run: |
-          response = curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-8
-          echo $response
+          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-8
         # uses: strumwolf/delete-deployment-environment@v2
         # with:
         #   # ⚠️ The provided token needs permission for admin write:org
