--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -40,9 +40,8 @@ jobs:
       - name: Clean up GitHub environment
         if: ${{ github.event.action == 'closed' }}
         run: |
-          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}
-        # uses: strumwolf/delete-deployment-environment@v2
-        # with:
-        #   # ⚠️ The provided token needs permission for admin write:org
-        #   token: ${{ secrets.GH_ACCESS_TOKEN }}
-        #   environment: pr-${{ github.event.number }}
+          curl -v -X DELETE \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}"
