--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -36,12 +36,19 @@ jobs:
         uses: superfly/fly-pr-review-apps@1.2.0
         with:
           secrets: SUPABASE_URL=${{secrets.SUPABASE_URL}} SUPABASE_ANON_KEY=${{secrets.SUPABASE_ANON_KEY}}
-
-      - name: Clean up GitHub environment
+          
+      - name: 🗑 Delete deployment environment
+        uses: strumwolf/delete-deployment-environment@v2.2.3
         if: ${{ github.event.action == 'closed' }}
-        run: |
-          curl -v -X DELETE \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          "https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}"
+        with:
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
+          environment: pr-${{ github.event.number }}
+
+      # - name: Clean up GitHub environment
+      #   if: ${{ github.event.action == 'closed' }}
+      #   run: |
+      #     curl -v -X DELETE \
+      #     -H "Accept: application/vnd.github+json" \
+      #     -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" \
+      #     -H "X-GitHub-Api-Version: 2022-11-28" \
+      #     "https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}"
