--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -45,19 +45,19 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
 
-      - name: 🗑 Delete deployment environment
-        uses: strumwolf/delete-deployment-environment@v2.2.3
-        if: ${{ github.event.action == 'closed' }}
-        with:
-          token: ${{ steps.get-token.outputs.token }}
-          environment: pr-${{ github.event.number }}
-          ref: ${{ github.ref_name }}
-
-      # - name: Clean up GitHub environment
+      # - name: 🗑 Delete deployment environment
+      #   uses: strumwolf/delete-deployment-environment@v2.2.3
       #   if: ${{ github.event.action == 'closed' }}
-      #   run: |
-      #     curl -v -X DELETE \
-      #     -H "Accept: application/vnd.github+json" \
-      #     -H "Authorization: Bearer ${{ secrets.GH_ACCESS_TOKEN }}" \
-      #     -H "X-GitHub-Api-Version: 2022-11-28" \
-      #     "https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}"
+      #   with:
+      #     token: ${{ steps.get-token.outputs.token }}
+      #     environment: pr-${{ github.event.number }}
+      #     ref: ${{ github.ref_name }}
+
+      - name: Clean up GitHub environment
+        if: ${{ github.event.action == 'closed' }}
+        run: |
+          curl -v -X DELETE \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ steps.get-token.outputs.token }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "https://api.github.com/repos/anniebabannie/design-timeline/environments/pr-${{ github.event.number }}"
