--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -36,3 +36,11 @@ jobs:
         uses: superfly/fly-pr-review-apps@1.2.0
         with:
           secrets: SUPABASE_URL=${{secrets.SUPABASE_URL}} SUPABASE_ANON_KEY=${{secrets.SUPABASE_ANON_KEY}}
+      
+      - name: Clean up environment
+        run: |
+          gh api \
+          --method DELETE \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/anniebabannie/design-timeline/environments/pr-15
