--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -39,6 +39,8 @@ jobs:
       
       - name: Clean up environment
         if: github.event.action == 'closed'
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh api \
           --method DELETE \
