--- a/.github/workflows/fly-review.yaml
+++ b/.github/workflows/fly-review.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Clean up environment
         if: github.event.action == 'closed'
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
           gh api \
           --method DELETE \
